# neural-network-test

./: .gitignore  CMakeLists.txt  README.md  RUN  actualPredictions  network
src/: CMakeLists.txt  CSVDataReader.cpp  CSVDataReader.hpp  Connection.cpp  Connection.hpp  NNInfo.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  main.cpp  matrix.cpp  matrix.hpp
src/MNISTProject/: CMakeLists.txt  CSVDataReader.cpp  CSVDataReader.hpp  Connection.cpp  Connection.hpp  Layer.cpp  Layer.hpp  NNInfo.hpp  NNTypes.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  Neuron.hpp  main.cpp  matrix.hpp  xorlabels.csv  xortraindata.csv
